--- a/reviews.html
+++ b/reviews.html
@@ -144,6 +144,38 @@ ul.task-list li input[type="checkbox"] {
 
 </header>
 
+<p><em>Senior Technical Instructional Designer</em></p>
+<blockquote class="blockquote">
+<p>Adam Santone is an incredible technical instructional designer and immensely capable in data visualization and training. He brings a wealth of experience and a unique skill set to this work. Any organization interested hiring a creative instructional designer well-prepared for the future of learning would strike gold having Adam on their team.</p>
+</blockquote>
+<div style="text-align: right">
+<p>Danielle Hunt, MA</p>
+</div>
+<blockquote class="blockquote">
+<p>Adam, I am sad to no longer be working with you, but I can hardly wait to see what your next project will be. You are so incredibly brilliant in so many areas and so generous in helping others to understand complexities. Wherever you go, I know that you will be making a big contribution. All the best, my friend.</p>
+</blockquote>
+<div style="text-align: right">
+<p>Kimberly D. Barnett Gibson, PhD</p>
+</div>
+<blockquote class="blockquote">
+<p>I have little to add other than continuing to sing the praises that other colleagues of Adam have! He is incredibly talented and would be a major asset to any team. I’m looking forward to seeing where your career takes you next and am sad to no longer have front-row access to your incredible insights, support and talent.</p>
+</blockquote>
+<div style="text-align: right">
+<p>Ericka Ericson</p>
+</div>
+<blockquote class="blockquote">
+<p>Anyone would be lucky to have Adam on their team - he is an innovator and a problem solver!</p>
+</blockquote>
+<div style="text-align: right">
+<p>Christie DeCarolis, MSIT</p>
+</div>
+<blockquote class="blockquote">
+<p>Adam, with your array of technical and design skills and your ability and willingness to innovate to improve processes and efficiency, anyone in the ed tech space (or any space…) would be so fortunate to have this opportunity to hire you! Good luck and take care!</p>
+</blockquote>
+<div style="text-align: right">
+<p>Joy K. Adams-O’Brien, PhD</p>
+</div>
+<hr>
 <p><em>Computer Graphics Research Graduate Student</em></p>
 <blockquote class="blockquote">
 <p>Adam and I studied together at Purdue University in the then-nascent field of virtual reality. Adam was consistently out in front on the vision side of things, able to conceptualize applications for our technology that were not only interesting but useful. He has that rare combination of energetic creativity coupled with rigorous technical skills. During our studies he was as comfortable working through difficult statistical proofs as he was sketching animated characters for a game. Further, his background in the life sciences provides him a researcher’s eye for logic, critical thinking, and managing complex, interacting systems. He is also a tireless collaborator, willing to put in the hours required to make a difficult project successful. Lastly, he is friendly, funny, and personable - an outstanding team member who is a pleasure to work with.</p>
