updated portfolio function style
removed styles.css

--- a/portfolio.html
+++ b/portfolio.html
@@ -164,7 +164,7 @@ ul.task-list li input[type="checkbox"] {
 </blockquote>
 <p><a href="https://cran.r-project.org/web/packages/rsbp/index.html">R Package ‘rsbp’</a></p>
 <blockquote class="blockquote">
-<p>The rsbp package allows for easy access to information on biological parts from the iGEM Registry of Standard Biological Parts. R users can call the function getPart(“part name”) to retrieve basic part information including DNA sequence, function, and authorship.</p>
+<p>The rsbp package allows for easy access to information on biological parts from the iGEM Registry of Standard Biological Parts. R users can call the function <code>getPart("part name")</code> to retrieve basic part information including DNA sequence, function, and authorship.</p>
 </blockquote>
 </section>
 <section id="instructional-design" class="level3">
