--- a/reviews.html
+++ b/reviews.html
@@ -146,6 +146,13 @@ ul.task-list li input[type="checkbox"] {
 
 <p><em>Senior Technical Instructional Designer</em></p>
 <blockquote class="blockquote">
+<p>Adam is a fantastic designer, I have worked closely with Adam on several design projects, he is highly diligent and always on time with his design deliverables, apart from projects, Adam has contributed significantly towards automating reporting on our QMS review results across global design.</p>
+<p>Adam is highly skilled at developing high-tech courses like ML, AI, and computer vision, his passion for coding runs deep, and he has contributed significantly towards upskilling our team and too, you will be lucky to have him on board your team.</p>
+</blockquote>
+<div style="text-align: right">
+<p>Boaz Kenny</p>
+</div>
+<blockquote class="blockquote">
 <p>Adam Santone is an incredible technical instructional designer and immensely capable in data visualization and training. He brings a wealth of experience and a unique skill set to this work. Any organization interested hiring a creative instructional designer well-prepared for the future of learning would strike gold having Adam on their team.</p>
 </blockquote>
 <div style="text-align: right">
