--- a/reviews.html
+++ b/reviews.html
@@ -190,6 +190,24 @@ ul.task-list li input[type="checkbox"] {
 <div style="text-align: right">
 <p>David Whittinghill, PhD</p>
 </div>
+<blockquote class="blockquote">
+<p>Adam and I were colleagues in graduate school, often completing coursework and associated research projects at the Purdue Envision Center for Data Perceptualization. One of our collaborative research projects involved constructing a study to evaluate user navigation performance in an immersive virtual environment. Adam primarily worked on the environment and interaction, while I worked on user recruitment and data collection procedures. Adam was great at setting up the environment, navigation, and system for creating in-scene visual cues. He’s a great guy to work with and I’d recommend him for any VR user research team.</p>
+</blockquote>
+<div style="text-align: right">
+<p>Daniel Wittenborn</p>
+</div>
+<blockquote class="blockquote">
+<p>Adam is very knowledgeable and experienced in graphic design, 2D/3D animation and application interface design. His work was excellent. He is also very friendly and easy to work with. I truly enjoyed working with him and highly recommend him to you as an employee.</p>
+</blockquote>
+<div style="text-align: right">
+<p>Chih-Hui Hsieh</p>
+</div>
+<blockquote class="blockquote">
+<p>I have always admired Adam’s ability to deal with ambiguity and lack of direction with patience and initiative. He required little to no supervision and was always full of positive and creative ideas during our brainstorming sessions. His broad knowledge in a variety of disciplines allowed him to provide valuable insights on our multi-disciplinary projects. I will also vouch for his creativity and artistic abilities when it comes to creating user interfaces and graphic designs.</p>
+</blockquote>
+<div style="text-align: right">
+<p>Tejas Bhatt, MS, CFS</p>
+</div>
 <hr>
 <p><em>Program Coordinator, Learning Systems Institute, Florida State University</em></p>
 <blockquote class="blockquote">
