updated portfolio and reviews

--- a/portfolio.html
+++ b/portfolio.html
@@ -126,7 +126,8 @@ ul.task-list li input[type="checkbox"] {
     <h2 id="toc-title">On this page</h2>
    
   <ul>
-  <li><a href="#technical" id="toc-technical" class="nav-link active" data-scroll-target="#technical">Technical</a></li>
+  <li><a href="#tools" id="toc-tools" class="nav-link active" data-scroll-target="#tools">Tools</a></li>
+  <li><a href="#technical" id="toc-technical" class="nav-link" data-scroll-target="#technical">Technical</a></li>
   <li><a href="#instructional-design" id="toc-instructional-design" class="nav-link" data-scroll-target="#instructional-design">Instructional Design</a></li>
   <li><a href="#biobuilder-and-science-outreach" id="toc-biobuilder-and-science-outreach" class="nav-link" data-scroll-target="#biobuilder-and-science-outreach">BioBuilder and Science Outreach</a></li>
   <li><a href="#mit" id="toc-mit" class="nav-link" data-scroll-target="#mit">MIT</a></li>
@@ -156,6 +157,19 @@ ul.task-list li input[type="checkbox"] {
 
 </header>
 
+<section id="tools" class="level3">
+<h3 class="anchored" data-anchor-id="tools">Tools</h3>
+<p><a href="https://github.com/asantone/id_tools/">Technical Tools for Instructional Designers</a> <code>GitHub</code></p>
+<blockquote class="blockquote">
+<p>I created these document manipulation tools to assist Instructional Designers and professionals in related roles.</p>
+<p>Tools include:</p>
+<ul>
+<li><code>docx_stitch</code> merge Microsoft Word files</li>
+<li><code>pptx_notes_export</code> export Microsoft PowerPoint presenter notes as <code>.docx</code> files</li>
+<li><code>pptx_ost_export</code> export Microsoft PowerPoint on-screen text (OST) as <code>.docx</code> files.</li>
+</ul>
+</blockquote>
+</section>
 <section id="technical" class="level3">
 <h3 class="anchored" data-anchor-id="technical">Technical</h3>
 <p><a href="https://asantone.github.io/ink/">Fountain Pen Ink Analysis &amp; Visualization</a></p>
