--- a/reviews.html
+++ b/reviews.html
@@ -150,37 +150,43 @@ ul.task-list li input[type="checkbox"] {
 <p>Adam is highly skilled at developing high-tech courses like ML, AI, and computer vision, his passion for coding runs deep, and he has contributed significantly towards upskilling our team and too, you will be lucky to have him on board your team.</p>
 </blockquote>
 <div style="text-align: right">
-<p>Boaz Kenny</p>
+<p>Boaz Kenny<br>
+<em>Project Manager</em></p>
 </div>
 <blockquote class="blockquote">
 <p>Adam Santone is an incredible technical instructional designer and immensely capable in data visualization and training. He brings a wealth of experience and a unique skill set to this work. Any organization interested hiring a creative instructional designer well-prepared for the future of learning would strike gold having Adam on their team.</p>
 </blockquote>
 <div style="text-align: right">
-<p>Danielle Hunt, MA</p>
+<p>Danielle Hunt, MA<br>
+<em>Instructional Designer</em></p>
 </div>
 <blockquote class="blockquote">
 <p>Adam, I am sad to no longer be working with you, but I can hardly wait to see what your next project will be. You are so incredibly brilliant in so many areas and so generous in helping others to understand complexities. Wherever you go, I know that you will be making a big contribution. All the best, my friend.</p>
 </blockquote>
 <div style="text-align: right">
-<p>Kimberly D. Barnett Gibson, PhD</p>
+<p>Kimberly D. Barnett Gibson, PhD<br>
+<em>Instructional Designer</em></p>
 </div>
 <blockquote class="blockquote">
 <p>I have little to add other than continuing to sing the praises that other colleagues of Adam have! He is incredibly talented and would be a major asset to any team. I’m looking forward to seeing where your career takes you next and am sad to no longer have front-row access to your incredible insights, support and talent.</p>
 </blockquote>
 <div style="text-align: right">
-<p>Ericka Ericson</p>
+<p>Ericka Ericson<br>
+<em>Instructional Designer</em></p>
 </div>
 <blockquote class="blockquote">
 <p>Anyone would be lucky to have Adam on their team - he is an innovator and a problem solver!</p>
 </blockquote>
 <div style="text-align: right">
-<p>Christie DeCarolis, MSIT</p>
+<p>Christie DeCarolis, MSIT<br>
+<em>Instructional Designer</em></p>
 </div>
 <blockquote class="blockquote">
 <p>Adam, with your array of technical and design skills and your ability and willingness to innovate to improve processes and efficiency, anyone in the ed tech space (or any space…) would be so fortunate to have this opportunity to hire you! Good luck and take care!</p>
 </blockquote>
 <div style="text-align: right">
-<p>Joy K. Adams-O’Brien, PhD</p>
+<p>Joy K. Adams-O’Brien, PhD<br>
+<em>Instructional Designer</em></p>
 </div>
 <hr>
 <p><em>Computer Graphics Research Graduate Student</em></p>
@@ -188,25 +194,29 @@ ul.task-list li input[type="checkbox"] {
 <p>Adam and I studied together at Purdue University in the then-nascent field of virtual reality. Adam was consistently out in front on the vision side of things, able to conceptualize applications for our technology that were not only interesting but useful. He has that rare combination of energetic creativity coupled with rigorous technical skills. During our studies he was as comfortable working through difficult statistical proofs as he was sketching animated characters for a game. Further, his background in the life sciences provides him a researcher’s eye for logic, critical thinking, and managing complex, interacting systems. He is also a tireless collaborator, willing to put in the hours required to make a difficult project successful. Lastly, he is friendly, funny, and personable - an outstanding team member who is a pleasure to work with.</p>
 </blockquote>
 <div style="text-align: right">
-<p>David Whittinghill, PhD</p>
+<p>David Whittinghill, PhD<br>
+<em>Faculty, Computer Graphics</em></p>
 </div>
 <blockquote class="blockquote">
 <p>Adam and I were colleagues in graduate school, often completing coursework and associated research projects at the Purdue Envision Center for Data Perceptualization. One of our collaborative research projects involved constructing a study to evaluate user navigation performance in an immersive virtual environment. Adam primarily worked on the environment and interaction, while I worked on user recruitment and data collection procedures. Adam was great at setting up the environment, navigation, and system for creating in-scene visual cues. He’s a great guy to work with and I’d recommend him for any VR user research team.</p>
 </blockquote>
 <div style="text-align: right">
-<p>Daniel Wittenborn</p>
+<p>Daniel Wittenborn<br>
+<em>Program Manager</em></p>
 </div>
 <blockquote class="blockquote">
 <p>Adam is very knowledgeable and experienced in graphic design, 2D/3D animation and application interface design. His work was excellent. He is also very friendly and easy to work with. I truly enjoyed working with him and highly recommend him to you as an employee.</p>
 </blockquote>
 <div style="text-align: right">
-<p>Chih-Hui Hsieh</p>
+<p>Chih-Hui Hsieh<br>
+<em>Technical Engineer</em></p>
 </div>
 <blockquote class="blockquote">
 <p>I have always admired Adam’s ability to deal with ambiguity and lack of direction with patience and initiative. He required little to no supervision and was always full of positive and creative ideas during our brainstorming sessions. His broad knowledge in a variety of disciplines allowed him to provide valuable insights on our multi-disciplinary projects. I will also vouch for his creativity and artistic abilities when it comes to creating user interfaces and graphic designs.</p>
 </blockquote>
 <div style="text-align: right">
-<p>Tejas Bhatt, MS, CFS</p>
+<p>Tejas Bhatt, MS, CFS<br>
+<em>Global Supply Chain Director</em></p>
 </div>
 <hr>
 <p><em>Program Coordinator, Learning Systems Institute, Florida State University</em></p>
@@ -216,7 +226,8 @@ ul.task-list li input[type="checkbox"] {
 <p>Adam’s greatest strength is his ability to work with others. He carries an enthusiasm for his work that’s contagious and improves the work (and attitudes) of those around him. I never had a disagreement with Adam during the two years that we worked closely together. He has a great way of making those around him feel valued and appreciated for their contribution to the effort.</p>
 </blockquote>
 <div style="text-align: right">
-<p>Bud Simpson</p>
+<p>Bud Simpson<br>
+<em>Filmmaker &amp; Programmer</em></p>
 </div>
 <blockquote class="blockquote">
 <p>It was an incredible honor to work with Adam for over 5 years at the Learning Systems Institute at Florida State University. He always impressed with a deep knowledge of biological and ecological systems, UX, human-computer interactions, and graphic design. If he wasn’t already an expert on a subject, he always become one in short order.</p>
@@ -224,7 +235,8 @@ ul.task-list li input[type="checkbox"] {
 <p>Adam’s fantastic attitude made him a integral part of our office culture. He always focused on building positive relationships, personal growth, increasing efficiency in our processes, and improving the culture and functioning of our team. He accepted feedback graciously, applied it to all future products, and provided meaningful feedback to me as a colleague and to other members of the team. He was unflappable when faced with challenges and had an uncanny knack for turning them into opportunities.</p>
 </blockquote>
 <div style="text-align: right">
-<p>Robert Lengacher</p>
+<p>Robert Lengacher<br>
+<em>Instructional Design Program Manager</em></p>
 </div>
 <blockquote class="blockquote">
 <p>I have had the pleasure of knowing Adam for several years and was able to work with him while I was at FSU for over two years. His breadth and depth of knowledge are quite impressive and difficult to describe in a concise manner. However, I would say his curiosity and desire to learn are two of his greatest traits. Together, those add up to a perfect person to collaborate with in both research and design. He has many great ideas and the skills to do something with them.</p>
@@ -232,7 +244,8 @@ ul.task-list li input[type="checkbox"] {
 <p>Beyond the 3D+MEA and 3D STEM Kits projects, Adam served as a subject matter expert and curriculum designer for interactive, online learning modules for K-12 students. As a member of the instructional design team, I recall our ID team always fighting to get to work on Adam’s modules because he combined his expertise in science and graphic design with advanced instructional design skills to provide the best science content that we had.</p>
 </blockquote>
 <div style="text-align: right">
-<p>Ronald L Carr, PhD</p>
+<p>Ronald L Carr, PhD<br>
+<em>Instructional Designer</em></p>
 </div>
 <hr>
 <p><em>Project Counselor, NASA Spaceflight Life Sciences Training Program (SLSTP)</em></p>
@@ -242,7 +255,8 @@ ul.task-list li input[type="checkbox"] {
 <p>It is my belief that you can be assured that he will be as highly committed, work well with others, will be engaged immediately in enabling any team to pursue continuing excellence for future advancement. I recommend Adam, without any reservation.</p>
 </blockquote>
 <div style="text-align: right">
-<p>Audrey Trotman, PhD</p>
+<p>Audrey Trotman, PhD<br>
+<em>Federal Program Lead and Analyst</em></p>
 </div>
 
 
