--- a/portfolio.html
+++ b/portfolio.html
@@ -126,7 +126,8 @@ ul.task-list li input[type="checkbox"] {
     <h2 id="toc-title">On this page</h2>
    
   <ul>
-  <li><a href="#tools" id="toc-tools" class="nav-link active" data-scroll-target="#tools">Tools</a></li>
+  <li><a href="#courses" id="toc-courses" class="nav-link active" data-scroll-target="#courses">Courses</a></li>
+  <li><a href="#tools" id="toc-tools" class="nav-link" data-scroll-target="#tools">Tools</a></li>
   <li><a href="#technical" id="toc-technical" class="nav-link" data-scroll-target="#technical">Technical</a></li>
   <li><a href="#instructional-design" id="toc-instructional-design" class="nav-link" data-scroll-target="#instructional-design">Instructional Design</a></li>
   <li><a href="#biobuilder-and-science-outreach" id="toc-biobuilder-and-science-outreach" class="nav-link" data-scroll-target="#biobuilder-and-science-outreach">BioBuilder and Science Outreach</a></li>
@@ -157,6 +158,17 @@ ul.task-list li input[type="checkbox"] {
 
 </header>
 
+<section id="courses" class="level3">
+<h3 class="anchored" data-anchor-id="courses">Courses</h3>
+<blockquote class="blockquote">
+<p>The following course introduction videos were recorded to provide learners an opportunity to hear about course content directly from the faculty. This particularly engaging trio of courses were created in collaboration with top-level faculty at one of the world’s premier computer science universities: Carnegie Mellon University. As part of the course development, I worked directly with each of these faculty, subject matter experts, and design colleagues to generate a structured program, learning objectives, and activities.</p>
+</blockquote>
+<ul>
+<li><a href="https://www.youtube.com/watch?v=uaB4kBSdXRo">Computer Vision</a> with Kris Kitani, PhD and Ioannis Gkioulekas, PhD</li>
+<li><a href="https://www.youtube.com/watch?v=CM7alouGoDk">Deep Learning</a> with Bhiksha Raj, PhD and Rita Singh, PhD</li>
+<li><a href="https://www.youtube.com/watch?v=xrSFFpBe73s">Machine Learning: Fundamentals and Algorithms</a> with Matt Gormley, PhD and Pat Virtue, PhD</li>
+</ul>
+</section>
 <section id="tools" class="level3">
 <h3 class="anchored" data-anchor-id="tools">Tools</h3>
 <p><a href="https://github.com/asantone/id_tools/">Technical Tools for Instructional Designers</a> <code>GitHub</code></p>
