--- a/portfolio.html
+++ b/portfolio.html
@@ -127,6 +127,7 @@ ul.task-list li input[type="checkbox"] {
    
   <ul>
   <li><a href="#courses" id="toc-courses" class="nav-link active" data-scroll-target="#courses">Courses</a></li>
+  <li><a href="#aiml-small-projects" id="toc-aiml-small-projects" class="nav-link" data-scroll-target="#aiml-small-projects">AI/ML Small Projects</a></li>
   <li><a href="#tools" id="toc-tools" class="nav-link" data-scroll-target="#tools">Tools</a></li>
   <li><a href="#technical" id="toc-technical" class="nav-link" data-scroll-target="#technical">Technical</a></li>
   <li><a href="#instructional-design" id="toc-instructional-design" class="nav-link" data-scroll-target="#instructional-design">Instructional Design</a></li>
@@ -168,6 +169,14 @@ ul.task-list li input[type="checkbox"] {
 <li><a href="https://www.youtube.com/watch?v=CM7alouGoDk">Deep Learning</a> with Bhiksha Raj, PhD and Rita Singh, PhD</li>
 <li><a href="https://www.youtube.com/watch?v=xrSFFpBe73s">Machine Learning: Fundamentals and Algorithms</a> with Matt Gormley, PhD and Pat Virtue, PhD</li>
 </ul>
+</section>
+<section id="aiml-small-projects" class="level3">
+<h3 class="anchored" data-anchor-id="aiml-small-projects">AI/ML Small Projects</h3>
+<p>Small projects to try various online AI/ML tools</p>
+<p><a href="https://www.kaggle.com/code/adamsantone/image-classification-with-resnet18">Slime Mold Image Classifier</a> <code>Kaggle</code></p>
+<blockquote class="blockquote">
+<p>Fine-tuned <a href="https://www.kaggle.com/datasets/pytorch/resnet18">ResNet-18</a> model for classifying images as <a href="https://en.wikipedia.org/wiki/Slime_mold">slime molds</a> or not. Based on <a href="https://www.kaggle.com/code/jhoward/is-it-a-bird-creating-a-model-from-your-own-data">an example</a> by Jeremy Howard. Updated code, layout, and explanations.</p>
+</blockquote>
 </section>
 <section id="tools" class="level3">
 <h3 class="anchored" data-anchor-id="tools">Tools</h3>
