update portfolio and reviews

--- a/portfolio.html
+++ b/portfolio.html
@@ -169,6 +169,138 @@ ul.task-list li input[type="checkbox"] {
 <li><a href="https://www.youtube.com/watch?v=CM7alouGoDk">Deep Learning</a> with Bhiksha Raj, PhD and Rita Singh, PhD</li>
 <li><a href="https://www.youtube.com/watch?v=xrSFFpBe73s">Machine Learning: Fundamentals and Algorithms</a> with Matt Gormley, PhD and Pat Virtue, PhD</li>
 </ul>
+<p>The following table contains a list of most of the courses I worked on at Emeritus.</p>
+<table class="table">
+<caption>Courses developed with Emeritus Institute of Management, Inc.&nbsp;(Emeritus.org)</caption>
+<colgroup>
+<col style="width: 54%">
+<col style="width: 15%">
+<col style="width: 28%">
+</colgroup>
+<thead>
+<tr class="header">
+<th>Course</th>
+<th>Organization</th>
+<th>Contribution</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td>Sustainability, Leadership, and Change</td>
+<td>INSEAD</td>
+<td><ul>
+<li><strong>Lead Designer</strong></li>
+<li>Custom Capstone</li>
+</ul></td>
+</tr>
+<tr class="even">
+<td>Metaverse Essentials</td>
+<td>MIT</td>
+<td><ul>
+<li><strong>Lead Designer</strong></li>
+<li>Custom Capstone</li>
+</ul></td>
+</tr>
+<tr class="odd">
+<td>The Internet of Things</td>
+<td>MIT</td>
+<td><ul>
+<li><strong>Lead Designer</strong></li>
+<li>Custom Capstone</li>
+</ul></td>
+</tr>
+<tr class="even">
+<td>Full Stack Development with MERN</td>
+<td>MIT</td>
+<td><ul>
+<li>Led code review</li>
+<li>Squashed bugs</li>
+</ul></td>
+</tr>
+<tr class="odd">
+<td>Augmented and Virtual Reality</td>
+<td>MIT</td>
+<td><ul>
+<li>Design kickoff</li>
+</ul></td>
+</tr>
+<tr class="even">
+<td>Machine Learning: Fundamentals and Algorithms</td>
+<td>CMU</td>
+<td><ul>
+<li><strong>Lead Designer</strong></li>
+<li>Custom graphics</li>
+</ul></td>
+</tr>
+<tr class="odd">
+<td>Deep Learning</td>
+<td>CMU</td>
+<td><ul>
+<li><strong>Lead Designer</strong></li>
+<li>Custom interactives</li>
+<li>Custom leaderboard</li>
+</ul></td>
+</tr>
+<tr class="even">
+<td>Computer Vision</td>
+<td>CMU</td>
+<td><ul>
+<li><strong>Lead Designer</strong></li>
+<li>Custom graphics</li>
+<li>Custom code</li>
+</ul></td>
+</tr>
+<tr class="odd">
+<td>Data Science in Healthcare</td>
+<td>Dartmouth</td>
+<td><ul>
+<li>Assistant Designer</li>
+</ul></td>
+</tr>
+<tr class="even">
+<td>Visualization &amp; Storytelling using Data</td>
+<td>Columbia</td>
+<td><ul>
+<li><strong>Lead Designer</strong></li>
+<li>Custom charts</li>
+</ul></td>
+</tr>
+<tr class="odd">
+<td>Macroeconomics for Executives</td>
+<td>Columbia</td>
+<td><ul>
+<li>Custom interactive</li>
+</ul></td>
+</tr>
+<tr class="even">
+<td>Data Science for Business Decisions</td>
+<td>Manchester</td>
+<td><ul>
+<li><strong>Lead Designer</strong></li>
+</ul></td>
+</tr>
+<tr class="odd">
+<td>Machine Learning for Business</td>
+<td>Toronto</td>
+<td><ul>
+<li>Assistant Designer</li>
+</ul></td>
+</tr>
+<tr class="even">
+<td><p>Professional Certificate in Instructional Design</p>
+<ul>
+<li>Principles of Visual Design</li>
+<li>Principles of Data Literacy</li>
+<li>Principles of Data Visualization</li>
+</ul></td>
+<td>Emeritus</td>
+<td><ul>
+<li>Faculty contributor</li>
+<li>Module Content</li>
+</ul></td>
+</tr>
+</tbody>
+</table>
 </section>
 <section id="aiml-small-projects" class="level3">
 <h3 class="anchored" data-anchor-id="aiml-small-projects">AI/ML Small Projects</h3>
