--- a/reviews.html
+++ b/reviews.html
@@ -146,77 +146,54 @@ ul.task-list li input[type="checkbox"] {
 
 <p><em>Senior Technical Instructional Designer</em></p>
 <blockquote class="blockquote">
+<p>I had the pleasure of leading Adam Santone as his team leader, and I wholeheartedly recommend him as an exceptional instructional designer. Adam’s expertise in technical course topics and data visualization is commendable, as he consistently delivers high-quality and engaging learning experiences. Working alongside him was a delight; his creativity and enthusiasm brought positive energy to our team. What sets Adam apart is his genuine commitment to personal and professional growth. Not only did he excel in his role, but he also played a pivotal role in helping me develop my technical design skills and beginner coding experience. Adam’s collaborative nature and strong communication skills make him a valuable asset to any instructional design team. Undoubtedly, he will continue to thrive and make significant contributions in his future endeavors.</p>
+</blockquote>
+<div style="text-align: right">
+<p><a href="https://www.linkedin.com/in/hectorrvalleiii/">Hector R Valle III</a><br>
+<em>Instructional Designer and Team Lead</em></p>
+</div>
+<blockquote class="blockquote">
 <p>Adam is a fantastic designer, I have worked closely with Adam on several design projects, he is highly diligent and always on time with his design deliverables, apart from projects, Adam has contributed significantly towards automating reporting on our QMS review results across global design.</p>
 <p>Adam is highly skilled at developing high-tech courses like ML, AI, and computer vision, his passion for coding runs deep, and he has contributed significantly towards upskilling our team and too, you will be lucky to have him on board your team.</p>
 </blockquote>
 <div style="text-align: right">
-<p>Boaz Kenny<br>
+<p><a href="https://www.linkedin.com/in/boazkenny/">Boaz Kenny</a><br>
 <em>Project Manager</em></p>
 </div>
 <blockquote class="blockquote">
 <p>Adam Santone is an incredible technical instructional designer and immensely capable in data visualization and training. He brings a wealth of experience and a unique skill set to this work. Any organization interested hiring a creative instructional designer well-prepared for the future of learning would strike gold having Adam on their team.</p>
 </blockquote>
 <div style="text-align: right">
-<p>Danielle Hunt, MA<br>
+<p><a href="https://www.linkedin.com/in/daniellemhunt/">Danielle Hunt, MA</a><br>
 <em>Instructional Designer</em></p>
 </div>
 <blockquote class="blockquote">
 <p>Adam, I am sad to no longer be working with you, but I can hardly wait to see what your next project will be. You are so incredibly brilliant in so many areas and so generous in helping others to understand complexities. Wherever you go, I know that you will be making a big contribution. All the best, my friend.</p>
 </blockquote>
 <div style="text-align: right">
-<p>Kimberly D. Barnett Gibson, PhD<br>
+<p><a href="https://www.linkedin.com/in/kimberlygibson/">Kimberly D. Barnett Gibson, PhD</a><br>
 <em>Instructional Designer</em></p>
 </div>
 <blockquote class="blockquote">
 <p>I have little to add other than continuing to sing the praises that other colleagues of Adam have! He is incredibly talented and would be a major asset to any team. I’m looking forward to seeing where your career takes you next and am sad to no longer have front-row access to your incredible insights, support and talent.</p>
 </blockquote>
 <div style="text-align: right">
-<p>Ericka Ericson<br>
+<p><a href="https://www.linkedin.com/in/ericsoey/">Ericka Ericson</a><br>
 <em>Instructional Designer</em></p>
 </div>
 <blockquote class="blockquote">
 <p>Anyone would be lucky to have Adam on their team - he is an innovator and a problem solver!</p>
 </blockquote>
 <div style="text-align: right">
-<p>Christie DeCarolis, MSIT<br>
+<p><a href="https://www.linkedin.com/in/christiedecarolis/">Christie DeCarolis, MSIT</a><br>
 <em>Instructional Designer</em></p>
 </div>
 <blockquote class="blockquote">
 <p>Adam, with your array of technical and design skills and your ability and willingness to innovate to improve processes and efficiency, anyone in the ed tech space (or any space…) would be so fortunate to have this opportunity to hire you! Good luck and take care!</p>
 </blockquote>
 <div style="text-align: right">
-<p>Joy K. Adams-O’Brien, PhD<br>
+<p><a href="https://www.linkedin.com/in/joykadamsphd/">Joy K. Adams-O’Brien, PhD</a><br>
 <em>Instructional Designer</em></p>
-</div>
-<hr>
-<p><em>Computer Graphics Research Graduate Student</em></p>
-<blockquote class="blockquote">
-<p>Adam and I studied together at Purdue University in the then-nascent field of virtual reality. Adam was consistently out in front on the vision side of things, able to conceptualize applications for our technology that were not only interesting but useful. He has that rare combination of energetic creativity coupled with rigorous technical skills. During our studies he was as comfortable working through difficult statistical proofs as he was sketching animated characters for a game. Further, his background in the life sciences provides him a researcher’s eye for logic, critical thinking, and managing complex, interacting systems. He is also a tireless collaborator, willing to put in the hours required to make a difficult project successful. Lastly, he is friendly, funny, and personable - an outstanding team member who is a pleasure to work with.</p>
-</blockquote>
-<div style="text-align: right">
-<p>David Whittinghill, PhD<br>
-<em>Faculty, Computer Graphics</em></p>
-</div>
-<blockquote class="blockquote">
-<p>Adam and I were colleagues in graduate school, often completing coursework and associated research projects at the Purdue Envision Center for Data Perceptualization. One of our collaborative research projects involved constructing a study to evaluate user navigation performance in an immersive virtual environment. Adam primarily worked on the environment and interaction, while I worked on user recruitment and data collection procedures. Adam was great at setting up the environment, navigation, and system for creating in-scene visual cues. He’s a great guy to work with and I’d recommend him for any VR user research team.</p>
-</blockquote>
-<div style="text-align: right">
-<p>Daniel Wittenborn<br>
-<em>Program Manager</em></p>
-</div>
-<blockquote class="blockquote">
-<p>Adam is very knowledgeable and experienced in graphic design, 2D/3D animation and application interface design. His work was excellent. He is also very friendly and easy to work with. I truly enjoyed working with him and highly recommend him to you as an employee.</p>
-</blockquote>
-<div style="text-align: right">
-<p>Chih-Hui Hsieh<br>
-<em>Technical Engineer</em></p>
-</div>
-<blockquote class="blockquote">
-<p>I have always admired Adam’s ability to deal with ambiguity and lack of direction with patience and initiative. He required little to no supervision and was always full of positive and creative ideas during our brainstorming sessions. His broad knowledge in a variety of disciplines allowed him to provide valuable insights on our multi-disciplinary projects. I will also vouch for his creativity and artistic abilities when it comes to creating user interfaces and graphic designs.</p>
-</blockquote>
-<div style="text-align: right">
-<p>Tejas Bhatt, MS, CFS<br>
-<em>Global Supply Chain Director</em></p>
 </div>
 <hr>
 <p><em>Program Coordinator, Learning Systems Institute, Florida State University</em></p>
@@ -226,7 +203,7 @@ ul.task-list li input[type="checkbox"] {
 <p>Adam’s greatest strength is his ability to work with others. He carries an enthusiasm for his work that’s contagious and improves the work (and attitudes) of those around him. I never had a disagreement with Adam during the two years that we worked closely together. He has a great way of making those around him feel valued and appreciated for their contribution to the effort.</p>
 </blockquote>
 <div style="text-align: right">
-<p>Bud Simpson<br>
+<p><a href="https://www.linkedin.com/in/budsimpson/">Bud Simpson</a><br>
 <em>Filmmaker &amp; Programmer</em></p>
 </div>
 <blockquote class="blockquote">
@@ -235,7 +212,7 @@ ul.task-list li input[type="checkbox"] {
 <p>Adam’s fantastic attitude made him a integral part of our office culture. He always focused on building positive relationships, personal growth, increasing efficiency in our processes, and improving the culture and functioning of our team. He accepted feedback graciously, applied it to all future products, and provided meaningful feedback to me as a colleague and to other members of the team. He was unflappable when faced with challenges and had an uncanny knack for turning them into opportunities.</p>
 </blockquote>
 <div style="text-align: right">
-<p>Robert Lengacher<br>
+<p><a href="https://www.linkedin.com/in/robertlengacher/">Robert Lengacher</a><br>
 <em>Instructional Design Program Manager</em></p>
 </div>
 <blockquote class="blockquote">
@@ -244,7 +221,7 @@ ul.task-list li input[type="checkbox"] {
 <p>Beyond the 3D+MEA and 3D STEM Kits projects, Adam served as a subject matter expert and curriculum designer for interactive, online learning modules for K-12 students. As a member of the instructional design team, I recall our ID team always fighting to get to work on Adam’s modules because he combined his expertise in science and graphic design with advanced instructional design skills to provide the best science content that we had.</p>
 </blockquote>
 <div style="text-align: right">
-<p>Ronald L Carr, PhD<br>
+<p><a href="https://www.linkedin.com/in/ronaldlcarr/">Ronald L Carr, PhD</a><br>
 <em>Instructional Designer</em></p>
 </div>
 <hr>
@@ -255,8 +232,38 @@ ul.task-list li input[type="checkbox"] {
 <p>It is my belief that you can be assured that he will be as highly committed, work well with others, will be engaged immediately in enabling any team to pursue continuing excellence for future advancement. I recommend Adam, without any reservation.</p>
 </blockquote>
 <div style="text-align: right">
-<p>Audrey Trotman, PhD<br>
+<p><a href="https://www.linkedin.com/in/audrey-trotman-a10a723/">Audrey Trotman, PhD</a><br>
 <em>Federal Program Lead and Analyst</em></p>
+</div>
+<hr>
+<p><em>Computer Graphics Research Graduate Student</em></p>
+<blockquote class="blockquote">
+<p>Adam and I studied together at Purdue University in the then-nascent field of virtual reality. Adam was consistently out in front on the vision side of things, able to conceptualize applications for our technology that were not only interesting but useful. He has that rare combination of energetic creativity coupled with rigorous technical skills. During our studies he was as comfortable working through difficult statistical proofs as he was sketching animated characters for a game. Further, his background in the life sciences provides him a researcher’s eye for logic, critical thinking, and managing complex, interacting systems. He is also a tireless collaborator, willing to put in the hours required to make a difficult project successful. Lastly, he is friendly, funny, and personable - an outstanding team member who is a pleasure to work with.</p>
+</blockquote>
+<div style="text-align: right">
+<p><a href="https://www.linkedin.com/in/davidwhittinghill/">David Whittinghill, PhD</a><br>
+<em>Faculty, Computer Graphics</em></p>
+</div>
+<blockquote class="blockquote">
+<p>Adam and I were colleagues in graduate school, often completing coursework and associated research projects at the Purdue Envision Center for Data Perceptualization. One of our collaborative research projects involved constructing a study to evaluate user navigation performance in an immersive virtual environment. Adam primarily worked on the environment and interaction, while I worked on user recruitment and data collection procedures. Adam was great at setting up the environment, navigation, and system for creating in-scene visual cues. He’s a great guy to work with and I’d recommend him for any VR user research team.</p>
+</blockquote>
+<div style="text-align: right">
+<p><a href="https://www.linkedin.com/in/daniel-wittenborn-001aab3/">Daniel Wittenborn</a><br>
+<em>Product Strategy Directorr</em></p>
+</div>
+<blockquote class="blockquote">
+<p>Adam is very knowledgeable and experienced in graphic design, 2D/3D animation and application interface design. His work was excellent. He is also very friendly and easy to work with. I truly enjoyed working with him and highly recommend him to you as an employee.</p>
+</blockquote>
+<div style="text-align: right">
+<p><a href="https://www.linkedin.com/in/chihhuihsieh/">Chih-Hui Hsieh</a><br>
+<em>Technical Engineer</em></p>
+</div>
+<blockquote class="blockquote">
+<p>I have always admired Adam’s ability to deal with ambiguity and lack of direction with patience and initiative. He required little to no supervision and was always full of positive and creative ideas during our brainstorming sessions. His broad knowledge in a variety of disciplines allowed him to provide valuable insights on our multi-disciplinary projects. I will also vouch for his creativity and artistic abilities when it comes to creating user interfaces and graphic designs.</p>
+</blockquote>
+<div style="text-align: right">
+<p><a href="https://www.linkedin.com/in/btejas/">Tejas Bhatt, MS, CFS</a><br>
+<em>Global Supply Chain Director</em></p>
 </div>
 
 
