--- a/portfolio.html
+++ b/portfolio.html
@@ -384,7 +384,7 @@ ul.task-list li input[type="checkbox"] {
 <li><a href="https://asantone.github.io/module09.html">Module 09</a>: Fuzzy Regression Discontinuity Design</li>
 <li><a href="https://asantone.github.io/module10.html">Module 10</a>: Design Principles of Data Visualization</li>
 <li><a href="https://asantone.github.io/module11.html">Module 11</a>: Random Forest Regression &amp; Sentiment Analysis</li>
-<li><a href="https://asantone.github.io/module12.html">Module 12</a>: Review: Sharp Regression Discontinuity &amp; Nonparametric Regression</li>
+<li><a href="https://asantone.github.io/module12b.html">Module 12</a>: Review: Sharp Regression Discontinuity &amp; Nonparametric Regression</li>
 </ul>
 <p><a href="https://asantone.github.io/didgeridata/">Didgeridata</a></p>
 <blockquote class="blockquote">
