--- a/consulting.html
+++ b/consulting.html
@@ -148,7 +148,9 @@ ul.task-list li input[type="checkbox"] {
 <ul>
 <li>Data analysis and visualization
 <ul>
-<li>ETL and clean-up</li>
+<li>Data clean-up</li>
+<li>Exploratory analysis</li>
+<li>Modeling and prediction</li>
 <li>Professional chart design</li>
 <li>Report design and automation</li>
 </ul></li>
@@ -157,6 +159,10 @@ ul.task-list li input[type="checkbox"] {
 <li>K-12</li>
 <li>University</li>
 <li>Professional</li>
+<li>Lesson design in STEAM disciplines</li>
+<li>Creative, hands-on learning</li>
+<li>Simulations and interactives</li>
+<li>Video production/direction</li>
 </ul></li>
 </ul>
 <p><a href="mailto:adam.santone+consulting@gmail.com">Contact Me</a></p>
