update for tools page

--- a/tools.html
+++ b/tools.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Adam Santone, PhD - About Me</title>
+<title>Adam Santone, PhD - Tools</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -82,7 +82,7 @@ ul.task-list li input[type="checkbox"] {
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav navbar-nav-scroll me-auto">
   <li class="nav-item">
-    <a class="nav-link active" href="./index.html" rel="" target="" aria-current="page">
+    <a class="nav-link" href="./index.html" rel="" target="">
  <span class="menu-text">About</span></a>
   </li>  
   <li class="nav-item">
@@ -114,7 +114,7 @@ ul.task-list li input[type="checkbox"] {
  <span class="menu-text">Education</span></a>
   </li>  
   <li class="nav-item">
-    <a class="nav-link" href="./tools.html" rel="" target="">
+    <a class="nav-link active" href="./tools.html" rel="" target="" aria-current="page">
  <span class="menu-text">Tools</span></a>
   </li>  
 </ul>
@@ -129,14 +129,23 @@ ul.task-list li input[type="checkbox"] {
 <!-- sidebar -->
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
-        
+        <nav id="TOC" role="doc-toc" class="toc-active">
+    <h2 id="toc-title">On this page</h2>
+   
+  <ul>
+  <li><a href="#instructional-design-audio-video-graphics" id="toc-instructional-design-audio-video-graphics" class="nav-link active" data-scroll-target="#instructional-design-audio-video-graphics">Instructional Design, Audio, Video, &amp; Graphics</a></li>
+  <li><a href="#project-management-business-productivity" id="toc-project-management-business-productivity" class="nav-link" data-scroll-target="#project-management-business-productivity">Project Management &amp; Business Productivity</a></li>
+  <li><a href="#data-science.-web-programming" id="toc-data-science.-web-programming" class="nav-link" data-scroll-target="#data-science.-web-programming">Data Science. Web, &amp; Programming</a></li>
+  <li><a href="#knowledge-skills-abilities" id="toc-knowledge-skills-abilities" class="nav-link" data-scroll-target="#knowledge-skills-abilities">Knowledge, Skills, &amp; Abilities</a></li>
+  </ul>
+</nav>
     </div>
 <!-- main -->
-<main class="content page-columns page-full" id="quarto-document-content">
+<main class="content" id="quarto-document-content">
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">About Me</h1>
+<h1 class="title">Tools</h1>
 </div>
 
 
@@ -151,22 +160,80 @@ ul.task-list li input[type="checkbox"] {
 
 </header>
 
-
-<div class="no-row-height column-margin column-container"><div class="">
-<p><img src="headshot.png" class="img-fluid"></p>
-</div></div><p>Learning Experience Architect with extensive experience in designing programs for some of the world’s top universities. Strengths include international collaboration, effective communication, broad expertise, analytical thinking, forward-looking problem-solving, and practical technical skills.</p>
-<p>For more information:</p>
+<section id="instructional-design-audio-video-graphics" class="level2">
+<h2 class="anchored" data-anchor-id="instructional-design-audio-video-graphics">Instructional Design, Audio, Video, &amp; Graphics</h2>
 <ul>
-<li><a href="https://www.linkedin.com/in/adamsantone/">LinkedIn profile</a></li>
-<li><a href="Adam_Santone_PhD_resume.pdf">Resume (.pdf)</a></li>
+<li>Backward Design</li>
+<li>ADDIE</li>
+<li>Canvas LMS</li>
+<li>Articulate Storyline</li>
+<li>Adobe Creative Suite</li>
+<li>Open Broadcaster Software (OBS)</li>
+<li>DaVinci Resolve</li>
+<li>Inkscape</li>
+<li>GIMP</li>
+<li>Audacity</li>
+<li>H5P</li>
+<li>Canva</li>
+<li>Zoom</li>
 </ul>
-<div class="cell">
-<div class="cell-output-display">
-<p><embed src="nodegraph.html" width="780" height="500"></p>
-</div>
-</div>
+</section>
+<section id="project-management-business-productivity" class="level2">
+<h2 class="anchored" data-anchor-id="project-management-business-productivity">Project Management &amp; Business Productivity</h2>
+<ul>
+<li>Wrike</li>
+<li>Google Suite</li>
+<li>SharePoint</li>
+</ul>
+</section>
+<section id="data-science.-web-programming" class="level2">
+<h2 class="anchored" data-anchor-id="data-science.-web-programming">Data Science. Web, &amp; Programming</h2>
+<ul>
+<li>R</li>
+<li>Python</li>
+<li>RStudio</li>
+<li>Quarto</li>
+<li>Trinket</li>
+<li>Excel &amp; Google Sheets</li>
+<li>Markdown</li>
+<li>Github</li>
+<li>Jupyter Notebooks</li>
+<li>Visual Studio Code</li>
+<li>HTML</li>
+<li>CSS</li>
+<li>JSON</li>
+<li>CSV</li>
+</ul>
+</section>
+<section id="knowledge-skills-abilities" class="level2">
+<h2 class="anchored" data-anchor-id="knowledge-skills-abilities">Knowledge, Skills, &amp; Abilities</h2>
+<ul>
+<li>Technical writing and communication</li>
+<li>Curriculum development &amp; delivery</li>
+<li>Online instruction</li>
+<li>Data wrangling</li>
+<li>Data analysis</li>
+<li>Data visualization</li>
+<li>Generative AI for instructional design</li>
+<li>Interactive simulations</li>
+<li>Productivity tools development</li>
+<li>Video direction and production</li>
+<li>Studio, online, and field recording/filming</li>
+<li>Visual design, UI/UX design</li>
+<li>Team interaction</li>
+<li>Project planning</li>
+<li>Adult learning / andragogy</li>
+<li>Youth learning / pedagogy</li>
+<li>eLearning</li>
+<li>Machine learning</li>
+<li>Artificial intelligence</li>
+<li>3D printing and instructional model development</li>
+<li>STEAM Outreach (bioengineering, space life sciences, computational thinking, music+climate data)</li>
+<li>Face-to-face and online training and workshops</li>
+</ul>
 
 
+</section>
 
 </main> <!-- /main -->
 <script id="quarto-html-after-body" type="application/javascript">
