--- a/portfolio.html
+++ b/portfolio.html
@@ -113,6 +113,10 @@ ul.task-list li input[type="checkbox"] {
     <a class="nav-link" href="./education.html" rel="" target="">
  <span class="menu-text">Education</span></a>
   </li>  
+  <li class="nav-item">
+    <a class="nav-link" href="./tools.html" rel="" target="">
+ <span class="menu-text">Tools</span></a>
+  </li>  
 </ul>
             <div class="quarto-navbar-tools ms-auto">
 </div>
