--- a/nodegraph.html
+++ b/nodegraph.html
@@ -1,4 +1,7 @@
-</head>
+<html>
+<head>
+<meta charset="utf-8" />
+<title>forceNetwork</title>
 <script>(function() {
   // If window.HTMLWidgets is already defined, then use it; otherwise create a
   // new object. This allows preceding code to set options that affect the
@@ -1201,12 +1204,13 @@ return function(){for(var n=0,e=0;e<t;++e)n+=Math.random();return n}},um=functio
   },
 });
 </script>
+
 </head>
 <body style="background-color: white;">
 <div id="htmlwidget_container">
-  <div class="forceNetwork html-widget html-fill-item-overflow-hidden html-fill-item" id="htmlwidget-33589550bb4528a14cf3" style="width:960px;height:500px;"></div>
+  <div class="forceNetwork html-widget html-fill-item-overflow-hidden html-fill-item" id="htmlwidget-02c52759a8d8f03d3599" style="width:960px;height:500px;"></div>
 </div>
-<script type="application/json" data-for="htmlwidget-33589550bb4528a14cf3">{"x":{"links":{"source":[8,8,8,8,14,14,7,7,7,16,16,16,6,6,6,16,1,3,3,3,2,13,11,5,4,4,4,4],"target":[14,7,16,6,1,10,4,2,3,13,11,12,15,17,5,9,9,13,11,12,9,15,15,3,18,15,0,14],"value":[1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1],"colour":["#666","#666","#666","#666","#666","#666","#666","#666","#666","#666","#666","#666","#666","#666","#666","#666","#666","#666","#666","#666","#666","#666","#666","#666","#666","#666","#666","#666"]},"nodes":{"name":["3D Models","Biology","Computational Thinking","Data Science","Human Spatial Cognition","Instructional Design","Learning","Mathematics","Me","Outreach","Plants","Python","Quarto","R","Science","Simulations","Technology","Video","Video Games"],"group":[1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1],"nodesize":[8,8,8,8,8,8,8,8,8,8,8,8,8,8,8,8,8,8,8]},"options":{"NodeID":"name","Group":"group","colourScale":"d3.scaleOrdinal(['#18bc9c'])","fontSize":14,"fontFamily":"serif","clickTextSize":35,"linkDistance":4,"linkWidth":"'1.5px'.toString()","charge":-400,"opacity":0.9,"zoom":true,"legend":false,"arrows":false,"nodesize":true,"radiusCalculation":"d.nodesize","bounded":false,"opacityNoHover":1,"clickAction":null}},"evals":[],"jsHooks":[]}</script>
-<script type="application/htmlwidget-sizing" data-for="htmlwidget-33589550bb4528a14cf3">{"viewer":{"width":960,"height":500,"padding":10,"fill":true},"browser":{"width":960,"height":500,"padding":10,"fill":true}}</script>
+<script type="application/json" data-for="htmlwidget-02c52759a8d8f03d3599">{"x":{"links":{"source":[8,8,8,8,14,14,7,7,7,16,16,16,6,6,6,16,1,3,3,3,2,13,11,5,4,4,4,4],"target":[14,7,16,6,1,10,4,2,3,13,11,12,15,17,5,9,9,13,11,12,9,15,15,3,18,15,0,14],"value":[1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1],"colour":["#666","#666","#666","#666","#666","#666","#666","#666","#666","#666","#666","#666","#666","#666","#666","#666","#666","#666","#666","#666","#666","#666","#666","#666","#666","#666","#666","#666"]},"nodes":{"name":["3D Models","Biology","Computational Thinking","Data Science","Human Spatial Cognition","Instructional Design","Learning","Mathematics","Me","Outreach","Plants","Python","Quarto","R","Science","Simulations","Technology","Video","Video Games"],"group":[1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1],"nodesize":[8,8,8,8,8,8,8,8,8,8,8,8,8,8,8,8,8,8,8]},"options":{"NodeID":"name","Group":"group","colourScale":"d3.scaleOrdinal(['#18bc9c'])","fontSize":14,"fontFamily":"serif","clickTextSize":35,"linkDistance":4,"linkWidth":"'1.5px'.toString()","charge":-400,"opacity":0.9,"zoom":true,"legend":false,"arrows":false,"nodesize":true,"radiusCalculation":"d.nodesize","bounded":false,"opacityNoHover":1,"clickAction":null}},"evals":[],"jsHooks":[]}</script>
+<script type="application/htmlwidget-sizing" data-for="htmlwidget-02c52759a8d8f03d3599">{"viewer":{"width":450,"height":350,"padding":10,"fill":true},"browser":{"width":960,"height":500,"padding":10,"fill":true}}</script>
 </body>
-
+</html>
