--- a/tools.html
+++ b/tools.html
@@ -166,6 +166,7 @@ ul.task-list li input[type="checkbox"] {
 <li>Backward Design</li>
 <li>ADDIE</li>
 <li>Canvas LMS</li>
+<li>BugHerd</li>
 <li>Articulate Storyline</li>
 <li>Adobe Creative Suite</li>
 <li>Open Broadcaster Software (OBS)</li>
@@ -197,6 +198,7 @@ ul.task-list li input[type="checkbox"] {
 <li>Excel &amp; Google Sheets</li>
 <li>Markdown</li>
 <li>Github</li>
+<li>Codio</li>
 <li>Jupyter Notebooks</li>
 <li>Visual Studio Code</li>
 <li>HTML</li>
