--- a/tools.html
+++ b/tools.html
@@ -135,7 +135,7 @@ ul.task-list li input[type="checkbox"] {
   <ul>
   <li><a href="#instructional-design-audio-video-graphics" id="toc-instructional-design-audio-video-graphics" class="nav-link active" data-scroll-target="#instructional-design-audio-video-graphics">Instructional Design, Audio, Video, &amp; Graphics</a></li>
   <li><a href="#project-management-business-productivity" id="toc-project-management-business-productivity" class="nav-link" data-scroll-target="#project-management-business-productivity">Project Management &amp; Business Productivity</a></li>
-  <li><a href="#data-science.-web-programming" id="toc-data-science.-web-programming" class="nav-link" data-scroll-target="#data-science.-web-programming">Data Science. Web, &amp; Programming</a></li>
+  <li><a href="#data-science-web-programming" id="toc-data-science-web-programming" class="nav-link" data-scroll-target="#data-science-web-programming">Data Science, Web, &amp; Programming</a></li>
   <li><a href="#knowledge-skills-abilities" id="toc-knowledge-skills-abilities" class="nav-link" data-scroll-target="#knowledge-skills-abilities">Knowledge, Skills, &amp; Abilities</a></li>
   </ul>
 </nav>
@@ -187,8 +187,8 @@ ul.task-list li input[type="checkbox"] {
 <li>SharePoint</li>
 </ul>
 </section>
-<section id="data-science.-web-programming" class="level2">
-<h2 class="anchored" data-anchor-id="data-science.-web-programming">Data Science. Web, &amp; Programming</h2>
+<section id="data-science-web-programming" class="level2">
+<h2 class="anchored" data-anchor-id="data-science-web-programming">Data Science, Web, &amp; Programming</h2>
 <ul>
 <li>R</li>
 <li>Python</li>
